--- a/kobra.csproj
+++ b/kobra.csproj
@@ -12,4 +12,13 @@
     <PackageReference Include="Silk.NET" Version="2.22.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="shader\basicfrag.frag">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="shader\basicvert.vert">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
